...
        android:src="@android:drawable/ic_input_add"
        app:layout_constraintBottom_toBottomOf="@+id/searchBarContainer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/searchBarContainer" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerAlbums"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:spanCount="2"
        app:layout_constraintBottom_toBottomOf="parent"
...
