...
                android:text="Tracks"
                android:textAppearance="?attr/textAppearanceHeadline6"
                android:visibility="gone"
                tools:visibility="visible"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/tracksRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:nestedScrollingEnabled="false"
                tools:itemCount="6"
                tools:listitem="@layout/track_item" />
...
