<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_albums"
        android:icon="@android:drawable/ic_dialog_dialer"
        android:title="Álbumes" />

    <item
        android:id="@+id/navigation_artists"
        android:icon="@android:drawable/ic_menu_myplaces"
        android:title="Artistas" />

    <item
        android:id="@+id/navigation_collectors"
        android:icon="@android:drawable/ic_menu_agenda"
        android:title="Coleccionistas" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@android:drawable/ic_menu_my_calendar"
        android:title="Perfil" />

</menu>
